ask token -> get cases

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -58,6 +58,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/navbar.js"></script>
+        <script src="scripts/services/cases.js"></script>
         <!-- endbuild -->
 </body>
 </html>
