--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -10,9 +10,9 @@
 </div>
 
 <div class="row marketing">
-  <div ng-repeat="thing in awesomeThings">
-      <h4>{{thing.name}}</h4>
-      <p>{{thing.info}}</p>
+  <div ng-repeat="Case in Cases">
+      <h4>{{Case.Name}}</h4>
+
   </div>
 </div>
 
