--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -12,6 +12,7 @@
 <div class="row marketing">
   <div ng-repeat="Case in Cases">
       <h4>{{Case.Name}}</h4>
+      <strong ng-click="remove(case)">Remove</strong>
 
   </div>
 </div>
